# fcwq-wqf

./: .gitignore  CITATION.cff  INSTALL.md  README.md  _config.yml  environment.yml  pyproject.toml
.github/workflows/: python-package.yml
test/wqf/: __init__.py  test_reader.py  test_writer.py
test/wqf/main/: test_processor.py
test/wqf/resources/: central.nc  coastal.nc  natural.nc
test/wqf/xgb/: __init__.py  test_registry.py
wqf/: __init__.py  aws.py  callbacks.py  datasetbuilder.py  logger.py  parser.py  processor.py  progress.py  reader.py  readerfactory.py  runner.py  writer.py  writerfactory.py
wqf/algorithms/: __init__.py  forecast.py  gaussian.py
wqf/config/: __init__.py  wqf.config.reader.json  wqf.config.writer.json  wqf.config.yml
wqf/interface/: __init__.py  algorithm.py  benchmark.py  constants.py  exitcodes.py  metric.py  operator.py  plot.py  processing.py  reading.py  signalhandling.py  writing.py
wqf/main/: __init__.py  main.py
wqf/operators/: __init__.py  forecastop.py
wqf/templates/: __init__.py  fc.cdl  fcgen.py  in.cdl
wqf/util/: atted.py
wqf/val/: __init__.py  benchmarks.py  metrics.py  mov.py  plots.py  pvp.py  pvr.py  tdr.py
wqf/xgb/: __init__.py
wqf/xgb/config/: __init__.py  t1t2t3t4t5chl_central.json  t1t2t3t4t5chl_coastal.json  t1t2t3t4t5chl_natural.json  wqf.xgb.config.yml
